--- a/services/messaging-service/Dockerfile
+++ b/services/messaging-service/Dockerfile
@@ -1,15 +1,22 @@
+# Build argument to determine if we're inside SEB network
+ARG USE_SEB_ARTIFACTORY=true
+
 # --------------------
 # Stage 1: Base
 # --------------------
-FROM sebshift-io.repo7.sebank.se/library/golang:1.24 AS base
+FROM golang:1.24 AS base
 
-# Configure Debian repositories to use SEB Artifactory
-RUN rm /etc/apt/sources.list.d/debian.sources && \
-    echo 'Acquire::https::Verify-Host "false";Acquire::https::Verify-Peer "false";' | tee -a /etc/apt/apt.conf.d/80ssl-exceptions.conf && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm main universe unrestricted' >> /etc/apt/sources.list && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-updates main' >> /etc/apt/sources.list && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-backports main' >> /etc/apt/sources.list && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-security main' >> /etc/apt/sources.list
+ARG USE_SEB_ARTIFACTORY
+
+# Configure Debian repositories conditionally
+RUN if [ "$USE_SEB_ARTIFACTORY" = "true" ]; then \
+        rm -f /etc/apt/sources.list.d/debian.sources && \
+        echo 'Acquire::https::Verify-Host "false";Acquire::https::Verify-Peer "false";' | tee -a /etc/apt/apt.conf.d/80ssl-exceptions.conf && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm main universe unrestricted' >> /etc/apt/sources.list && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-updates main' >> /etc/apt/sources.list && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-backports main' >> /etc/apt/sources.list && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-security main' >> /etc/apt/sources.list; \
+    fi
 
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -20,26 +27,34 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     wget && \
     rm -rf /var/lib/apt/lists/*
 
-# Download SEB Root Certificates from public endpoints
-RUN mkdir -p /usr/local/share/ca-certificates && \
-    wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_ecc_g3.crt \
-        "http://pki.seb.se/g3/root/ecc/cert" 2>/dev/null || true && \
-    wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_rsa_g3.crt \
-        "http://pki.seb.se/g3/root/rsa/cert" 2>/dev/null || true && \
-    wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_v2.crt \
-        "http://seb-ca-v2.seb.se/SEB-CA-v2/SEB%20Root%20CA%20v2.pem" 2>/dev/null || true && \
-    update-ca-certificates
+# Download SEB Root Certificates (only if in SEB network)
+RUN if [ "$USE_SEB_ARTIFACTORY" = "true" ]; then \
+        mkdir -p /usr/local/share/ca-certificates && \
+        wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_ecc_g3.crt \
+            "http://pki.seb.se/g3/root/ecc/cert" 2>/dev/null || true && \
+        wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_rsa_g3.crt \
+            "http://pki.seb.se/g3/root/rsa/cert" 2>/dev/null || true && \
+        wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_v2.crt \
+            "http://seb-ca-v2.seb.se/SEB-CA-v2/SEB%20Root%20CA%20v2.pem" 2>/dev/null || true && \
+        update-ca-certificates; \
+    fi
 
-# Configure Go for SEB Artifactory environment
+# Configure Go environment conditionally
+RUN if [ "$USE_SEB_ARTIFACTORY" = "true" ]; then \
+        echo "export GOPROXY=https://repo7.sebank.se/artifactory/api/go/golang,direct" >> /etc/profile && \
+        echo "export GOSUMDB=off" >> /etc/profile && \
+        echo "export GOINSECURE=*" >> /etc/profile && \
+        git config --system http.sslVerify false; \
+    fi
+
 ENV SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
 ENV SSL_CERT_DIR=/etc/ssl/certs
 ENV GIT_SSL_CAINFO=/etc/ssl/certs/ca-certificates.crt
-# Use SEB Artifactory as Go proxy
-ENV GOPROXY=https://repo7.sebank.se/artifactory/api/go/golang,direct
-ENV GOSUMDB=off
-ENV GOINSECURE=*
-# Disable SSL verification for Git in corporate environment
-RUN git config --system http.sslVerify false
+
+# Set Go proxy based on environment
+ENV GOPROXY=${USE_SEB_ARTIFACTORY:+https://repo7.sebank.se/artifactory/api/go/golang,}direct
+ENV GOSUMDB=${USE_SEB_ARTIFACTORY:+off}
+ENV GOINSECURE=${USE_SEB_ARTIFACTORY:+*}
 
 WORKDIR /app
 
@@ -70,14 +85,18 @@ RUN --mount=type=cache,id=gomod,target=/go/pkg/mod \
 # --------------------
 # Stage 3: Runtime (lightweight)
 # --------------------
-FROM sebshift-io.repo7.sebank.se/library/debian:bookworm-slim
+FROM debian:bookworm-slim
 
-# Configure Debian repositories to use SEB Artifactory
-RUN rm -f /etc/apt/sources.list /etc/apt/sources.list.d/debian.sources && \
-    echo 'Acquire::https::Verify-Host "false";Acquire::https::Verify-Peer "false";' | tee -a /etc/apt/apt.conf.d/80ssl-exceptions.conf && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm main universe unrestricted' >> /etc/apt/sources.list && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-updates main' >> /etc/apt/sources.list && \
-    echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-security main' >> /etc/apt/sources.list
+ARG USE_SEB_ARTIFACTORY
+
+# Configure Debian repositories conditionally
+RUN if [ "$USE_SEB_ARTIFACTORY" = "true" ]; then \
+        rm -f /etc/apt/sources.list /etc/apt/sources.list.d/debian.sources && \
+        echo 'Acquire::https::Verify-Host "false";Acquire::https::Verify-Peer "false";' | tee -a /etc/apt/apt.conf.d/80ssl-exceptions.conf && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm main universe unrestricted' >> /etc/apt/sources.list && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-updates main' >> /etc/apt/sources.list && \
+        echo 'deb [trusted=yes] https://repo7.sebank.se/artifactory/deb bookworm-security main' >> /etc/apt/sources.list; \
+    fi
 
 # Install minimal runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -86,15 +105,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     wget && \
     rm -rf /var/lib/apt/lists/*
 
-# Download SEB Root Certificates for runtime
-RUN mkdir -p /usr/local/share/ca-certificates && \
-    wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_ecc_g3.crt \
-        "http://pki.seb.se/g3/root/ecc/cert" 2>/dev/null || true && \
-    wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_rsa_g3.crt \
-        "http://pki.seb.se/g3/root/rsa/cert" 2>/dev/null || true && \
-    wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_v2.crt \
-        "http://seb-ca-v2.seb.se/SEB-CA-v2/SEB%20Root%20CA%20v2.pem" 2>/dev/null || true && \
-    update-ca-certificates
+# Download SEB Root Certificates for runtime (only if in SEB network)
+RUN if [ "$USE_SEB_ARTIFACTORY" = "true" ]; then \
+        mkdir -p /usr/local/share/ca-certificates && \
+        wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_ecc_g3.crt \
+            "http://pki.seb.se/g3/root/ecc/cert" 2>/dev/null || true && \
+        wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_rsa_g3.crt \
+            "http://pki.seb.se/g3/root/rsa/cert" 2>/dev/null || true && \
+        wget --no-check-certificate -O /usr/local/share/ca-certificates/seb_root_ca_v2.crt \
+            "http://seb-ca-v2.seb.se/SEB-CA-v2/SEB%20Root%20CA%20v2.pem" 2>/dev/null || true && \
+        update-ca-certificates; \
+    fi
 
 # Create non-root user
 RUN groupadd -g 1000 appgroup && useradd -m -u 1000 -g appgroup appuser
