--- a/.github/workflows/lms-service-ci-cd.yml
+++ b/.github/workflows/lms-service-ci-cd.yml
@@ -194,6 +194,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            USE_SEB_ARTIFACTORY=false
 
       - name: Image digest
         run: echo "Image pushed with digest ${{ steps.meta.outputs.tags }}"
