fix(ci): add build argument to disable SEB Artifactory usage in CI/CD workflows

--- a/.github/workflows/messaging-service-ci-cd.yml
+++ b/.github/workflows/messaging-service-ci-cd.yml
@@ -264,6 +264,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            USE_SEB_ARTIFACTORY=false
 
       - name: Image digest
         run: echo "Image pushed with digest ${{ steps.meta.outputs.tags }}"
