--- a/.github/workflows/web-service-ci-cd.yml
+++ b/.github/workflows/web-service-ci-cd.yml
@@ -211,6 +211,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            USE_SEB_ARTIFACTORY=false
 
       - name: Image digest
         run: echo "Image pushed with digest ${{ steps.meta.outputs.tags }}"
