--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.14.2",
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^10.12.16",
     "jwt-decode": "^4.0.0",
     "next": "^15.1.3",
     "react": "^19.0.0",
